--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.2",
+        "hirethunk/verbs": "^0.6.4",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9"
     },
