--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "filament/filament": "^3.2",
         "hirethunk/verbs": "^0.6.4",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "spatie/laravel-data": "^4.13"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
