--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/typography": "^0.5.16",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-echo": "^2.0.0",
         "laravel-vite-plugin": "^1.2.0",
-        "postcss": "^8.4.47",
+        "postcss": "^8.5.2",
+        "postcss-nesting": "^13.0.1",
         "pusher-js": "^8.4.0",
-        "tailwindcss": "^3.4.13",
+        "tailwindcss": "^3.4.17",
         "vite": "^6.0.11"
     }
 }
