--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^11.31",
         "laravel/reverb": "^1.0",
         "laravel/tinker": "^2.9",
-        "spatie/laravel-data": "^4.13"
+        "spatie/laravel-data": "^4.13",
+        "spatie/laravel-event-sourcing": "^7.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
